--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,6 @@ project(test C)
 set(CMAKE_C_STANDARD 11)
 include_directories(/usr/include)
 
-add_executable(test main.c)
+add_executable(test main.c my_alloc.h my_alloc.c)
 target_link_libraries(test my_alloc)
+
