--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ project(test C)
 
 set(CMAKE_C_STANDARD 11)
 include_directories(/usr/include)
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 add_executable(test main.c my_alloc.h my_alloc.c)
 target_link_libraries(test my_alloc)
